# myace

./: .env  .gitignore  MEMO.md  README.md  README.org  pyproject.toml
src/myace/: __init__.py  active_learning.py  data_processing.py  io.py  plotting.py  utils.py
src/myace/cli/: active_learning_tool.py  collect_data.py
tests/Ag/: collected.pckl.gzip  input.yaml
